Added footer and updated color scheme

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,6 +3,10 @@
 $font-family-sans-serif:                'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 $brand-primary: #06C4D1;
+$brand-warning: #E3D2AF;
+$brand-danger: #F04366;
+
+$headings-color: #706770;
 
 $body-bg: #eee;
 
@@ -10,5 +14,13 @@ $navbar-border-radius: 0;
 $navbar-default-brand-color: #06C4D1;
 $navbar-default-link-color: #06C4D1;
 
+$input-border-focus: #06C4D1;
+
+$hr-border: #D6D6D6;
+
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+
+label {
+    color: #706770;
+}
