--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,7 +5,9 @@
 
   <div class="panel-body">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-      <%= devise_error_messages! %>
+      <div class="alert alert-danger">
+        <%= devise_error_messages! %>
+      </div>
 
       <div class="form-group">
         <%= f.label :email %><br />
