--- a/app/views/thoughts/_form.html.erb
+++ b/app/views/thoughts/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="form-group">
     <%= f.label "Thought" %><br>
-    <%= f.text_field :description, class: "form-control" %>
+    <%= f.text_area :description, class: "form-control", size: "60x12" %>
   </div>
 
   <div class="actions">
