--- a/app/views/thoughts/new.html.erb
+++ b/app/views/thoughts/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Thought</h1>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3>New Thought</h3>
+  </div>
 
-<%= render 'form' %>
+  <div class="panel-body">
+    <%= render 'form' %>
+  </div>
 
-<%= link_to 'Back', thoughts_path %>
+  <div class="panel-footer">
+    <%= link_to 'Back', thoughts_path %>
+  </div>
+</div>
