Added Modified at section, added image uploads with default images, and changed rating on Index page to use average score

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,7 +40,7 @@
       </ul>
       <% if user_signed_in? %>
         <%= link_to new_thought_path, type: "button", class: "btn btn-primary navbar-btn pull-right" do%>
-          <span class="glyphicon glyphicon-plus"></span> New Pin
+          <span class="glyphicon glyphicon-plus"></span> Add Thought
         <% end %>
       <% end %>
     </div><!-- /.navbar-collapse -->
