--- a/app/views/thoughts/index.html.erb
+++ b/app/views/thoughts/index.html.erb
@@ -1,35 +1,42 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Your Thoughts</h1>
 
-<table>
+<table class="table table-bordered white">
   <thead>
     <tr>
+      <th></th>
       <th>Title</th>
       <th>Thought</th>
       <th>User</th>
       <th>Rating</th>
-      <th colspan="3"></th>
+      <th>Modified</th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @thoughts.each do |thought| %>
       <tr>
+        <td><%= image_tag thought.image.url(:thumb) %></td>
         <td><%= thought.title %></td>
         <td><%= thought.description %></td>
         <td><%= thought.user.try(:email) %></td>
-        <td><%= rating_for thought, "quality", space: true %></td>
-        <td><%= link_to 'Show', thought %></td>
-        <% if thought.user == current_user %>
-          <td><%= link_to 'Edit', edit_thought_path(thought) %></td>
-          <td><%= link_to 'Destroy', thought, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
+        <td><%= rating_for thought, "quality", space: true, imdb_avg: true%></td>
+        <td><%= thought.updated_at.strftime("%m/%d/%Y at %I:%M%p") %></td>
+        <td>
+          <%= link_to 'Show', thought %>
+          <% if thought.user == current_user %>
+           | <%= link_to 'Edit', edit_thought_path(thought) %> | <%= link_to 'Destroy', thought, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Thought', new_thought_path %>
+<!-- <ul class="list-group">
+  <li class="list-group-item">Cras justo odio</li>
+  <li class="list-group-item">Dapibus ac facilisis in</li>
+  <li class="list-group-item">Morbi leo risus</li>
+  <li class="list-group-item">Porta ac consectetur ac</li>
+  <li class="list-group-item">Vestibulum at eros</li>
+</ul> -->
