--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,9 +8,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Thought Drop", root_path, class: "navbar-brand" %>
+      <%= link_to image_tag('thoughtdrop_logo.png'), root_path, :class => "navbar-brand" %>
     </div>
 
+    <% if user_signed_in? %>
+      <%= link_to new_thought_path, type: "button", class: "btn btn-primary navbar-btn pull-left" do%>
+        <span class="glyphicon glyphicon-plus"></span> Add Thought
+      <% end %>
+    <% end %>
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
@@ -38,11 +43,6 @@
           </li>
         <% end %>
       </ul>
-      <% if user_signed_in? %>
-        <%= link_to new_thought_path, type: "button", class: "btn btn-primary navbar-btn pull-right" do%>
-          <span class="glyphicon glyphicon-plus"></span> Add Thought
-        <% end %>
-      <% end %>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
