--- a/app/views/thoughts/_form.html.erb
+++ b/app/views/thoughts/_form.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :tag_list, "Tags (separated by commas)" %><br>
+    <%= f.text_field :tag_list, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
     <%= f.label "Rating" %><br>
     <%= rating_for @thought, "quality", disable_after_rate: false %>
   </div>
