--- a/app/views/thoughts/index.html.erb
+++ b/app/views/thoughts/index.html.erb
@@ -1,42 +1,51 @@
-<h1>Your Thoughts</h1>
+<%= render 'pages/home' unless user_signed_in? %>
 
-<table class="table table-bordered white">
-  <thead>
-    <tr>
-      <th></th>
-      <th>Title</th>
-      <th>Thought</th>
-      <th>User</th>
-      <th>Rating</th>
-      <th>Modified</th>
-      <th colspan="4"></th>
-    </tr>
-  </thead>
+<%= render 'pages/top' if user_signed_in? %>
 
-  <tbody>
-    <% @thoughts.each do |thought| %>
-      <tr>
-        <td><%= image_tag thought.image.url(:thumb) %></td>
-        <td><%= thought.title %></td>
-        <td><%= thought.description %></td>
-        <td><%= thought.user.try(:email) %></td>
-        <td><%= rating_for thought, "quality", space: true, imdb_avg: true%></td>
-        <td><%= thought.updated_at.strftime("%m/%d/%Y at %I:%M%p") %></td>
-        <td>
-          <%= link_to 'Show', thought %>
+<div id="thoughts">
+  <% @thoughts.each do |thought| %>
+    <% if current_user && thought.user == current_user %>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3>
+            <%= thought.title %>
+        </h3>
+      </div>
+
+      <div class="panel-body clearfix">
+          <h4>Description:</h4>
+          <p><%= thought.description %></p>
+
+          <hr>
+
+          <div class="img-container pull-left">
+              <!-- <%= link_to image_tag(thought.image.url(:medium)), thought %> -->
+              <%= image_tag thought.image.url(:medium) %>
+          </div>
+
+          <div class="clearfix">
+
+              <h4>Rating:</h4>
+              <p><%= rating_for thought, "quality", space: true %></p>
+
+              <h4>Tags:</h4>
+              <div class="tags">
+                  <%= raw thought.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %>
+              </div>
+          </div>
+
+          <!-- <sub class="pull-left clearfix"><%= thought.user.try(:name) %></sub> -->
+          <sub class="pull-right clearfix"><%= thought.updated_at.strftime("Last modified at %m/%d/%Y at %I:%M%p") %></sub>
+      </div>
+
+      <div class="panel-footer">
           <% if thought.user == current_user %>
-           | <%= link_to 'Edit', edit_thought_path(thought) %> | <%= link_to 'Destroy', thought, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <!-- <%= link_to 'Show', thought %> | -->
+              <%= link_to 'Back', thoughts_path %> |
+              <%= link_to 'Edit', edit_thought_path(thought) %> |
+              <%= link_to 'Delete', thought, method: :delete, data: { confirm: 'Are you sure?' }, class: "text-danger" %>
           <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<!-- <ul class="list-group">
-  <li class="list-group-item">Cras justo odio</li>
-  <li class="list-group-item">Dapibus ac facilisis in</li>
-  <li class="list-group-item">Morbi leo risus</li>
-  <li class="list-group-item">Porta ac consectetur ac</li>
-  <li class="list-group-item">Vestibulum at eros</li>
-</ul> -->
+      </div>
+</div>
+<% end %>
+<% end %>
