--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,16 +11,11 @@
       <%= link_to image_tag('thoughtdrop_logo.png'), root_path, :class => "navbar-brand" %>
     </div>
 
-    <% if user_signed_in? %>
-      <%= link_to new_thought_path, type: "button", class: "btn btn-primary navbar-btn pull-left" do%>
-        <span class="glyphicon glyphicon-plus"></span> Add Thought
-      <% end %>
-    <% end %>
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li><%= link_to "Account Settings", edit_user_registration_path %></li>
-          <li class="dropdown">
+          <!-- <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Action</a></li>
@@ -29,7 +24,7 @@
               <li role="separator" class="divider"></li>
               <li><a href="#">Separated link</a></li>
             </ul>
-          </li>
+          </li> -->
           <li>
             <%= link_to destroy_user_session_path, method: :delete do %>
               <span class="glyphicon glyphicon-log-out"></span> Sign Out
