--- a/app/views/thoughts/show.html.erb
+++ b/app/views/thoughts/show.html.erb
@@ -20,7 +20,7 @@
                 <div class="clearfix">
 
                     <h4>Rating:</h4>
-                    <p><%= rating_for @thought, "quality", space: true %></p>
+                    <p><%= rating_for @thought, "quality", star_path: '/images/ratyrate', space: true %></p>
 
                     <h4>Tags:</h4>
                     <div class="tags">
