--- a/app/assets/stylesheets/thoughts.scss
+++ b/app/assets/stylesheets/thoughts.scss
@@ -70,9 +70,10 @@
             }
         }
         sub {
+            display: inline-block;
             vertical-align: super;
-            position: relative;
-            top: 6px;
+            line-height: 1.2;
+            margin-top: 2px;
         }
     }
 
@@ -85,7 +86,7 @@
         height: 100%;
 
         a {
-            border-right: 1px solid #4b7df8;
+            border-right: 1px solid #bbb;
             display: block;
             float: left;
             text-align: center;
@@ -102,7 +103,7 @@
             }
 
             &:first-child {
-                border-left: 1px solid #4b7df8;
+                border-left: 1px solid #bbb;
             }
             &:last-child {
                 border-right: none;
@@ -112,5 +113,21 @@
                 background: red;
             }
         }
+    }
+}
+
+@media (max-width: 768px) {
+    #thoughts .thought-tags, #thoughts .thought-rating, #thoughts .thought-main sub {
+        line-height: 2;
+    }
+
+    #thoughts .thought-links a {
+        float: none;
+        width: 100%;
+        height: 33.5%;
+        border-right: none;
+        border-bottom: 1px solid #bbb;
+        border-left: 1px solid #bbb;
+        padding-top: 12%;
     }
 }
