--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -8,11 +8,13 @@ $brand-danger: #F04366;
 
 $headings-color: #706770;
 
-$body-bg: #eee;
+$body-bg: #fbfbfb;
 
+$navbar-default-bg: #4b7df8;
 $navbar-border-radius: 0;
-$navbar-default-brand-color: #285cda;
-$navbar-default-link-color: #4b7df8;
+$navbar-default-brand-color: #fff;
+$navbar-default-link-color: #fff;
+$navbar-default-link-hover-color: #eee;
 
 $input-border-focus: #285cda;
 
