--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to image_tag('thoughtdrop_logo.png'), root_path, :class => "navbar-brand" %>
+      <%= link_to image_tag('thought_drop_white_logo.png'), root_path, :class => "navbar-brand" %>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
