--- a/app/views/thoughts/_form.html.erb
+++ b/app/views/thoughts/_form.html.erb
@@ -33,7 +33,7 @@
 
   <div class="form-group">
     <%= f.label "Rating" %><br>
-    <%= rating_for @thought, "quality", star_path: '/images/ratyrate', disable_after_rate: false %>
+    <%= rating_for @thought, "quality", star_path: '/images/ratyrate'%>
   </div>
 
   <div class="actions">
